[package]
name = "not-enough-tps"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
rumqttc = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["tls-rustls", "runtime-tokio", "postgres"] }
tokio = { version = "1.47.1", features = ["full"] }
